# game_account_assistant

./: .gitignore  README.md  main.py  pyproject.toml
back/: 1.py  mcp_clinet_test.py  mcp_server.py  requirements.txt  sever_main.py  spider_daily_main.py
back/deal_mcp/: models.py
back/spider/: daily_main.py  test.py
back/spider/core/: base.py
back/spider/database/: Cmongo.py
back/spider/models/: daily.py
back/spider/pzds/: get_data.py
front/: package-lock.json  package.json
front/src/: App.css  App.js
front/src/component/: Card.module.css  Ccard.js  cmodel_chat.css  cmodel_chat.js
mcp/: client.py  mcp_server.py  models.py
