[project]
name = "game-account-assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiohttp>=3.11.18",
    "fastapi>=0.115.12",
    "fastmcp>=2.4.0",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-mcp-adapters>=0.1.1",
    "langchain-openai>=0.3.18",
    "langfuse>=2.60.5",
    "motor>=3.7.1",
    "openai>=1.82.0",
    "pyexecjs>=1.5.1",
    "python-dotenv>=1.1.0",
    "uvicorn>=0.34.2",
]
